<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Python Doc</string>
    <string name="add_task">New TO-DO</string>
    <string name="edit_task">Edit TO-DO</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">Python 3.7.2</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your TO-DO here.</string>
    <string name="empty_task_message">TO DOs cannot be empty</string>
    <string name="successfully_saved_task_message">TO-DO saved</string>
    <string name="list_title">TO-DO List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks:</string>
    <string name="statistics_completed_tasks">Completed tasks:</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>
    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>
    <string name="refresh">Refresh</string>
    <string name="title_home">Last</string>
    <string name="title_notifications">Next</string>
    <string name="toast_press_to_exit">Press again to exit</string>
    <string name="this_is_the_first">This is the first</string>
    <string name="this_is_the_last">This is the last</string>
    <string name="translate">Language</string>
    <string name="use_menu_button">Please use menu button</string>
    <string name="home_page">Home page</string>
    <string name="nav_about">Note</string>
    <string name="nav_more_app">Apps</string>
    <string name="catalog">C\nO\nN\nT\nE\nN\nT\nS</string>
    <string name="language_en">EN</string>
    <string name="language_zh_ch">简</string>
    <string name="language_zh_tw">繁</string>
    <string name="dialog_new_version">New version release</string>
    <string name="dialog_update">Update now?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_downloading">Downloading</string>
    <string name="dialog_try_again">Please try again</string>
    <string name="doc_note_back">return</string>
    <string name="doc_note_add">add</string>
    <string name="doc_note_add_cancle">Cancel</string>
    <string name="doc_note_add_send">Send</string>
    <string name="note_input_text">Please input your note here.</string>
    <string name="note_text_too_long">Please input letter less than</string>
    <string name="note_send_success">Send success</string>
    <string name="note_check_net_connect">Please check your net connection</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="info_rank">Rank</string>
    <string name="info_exp">Exp</string>

    <string name="rank_now">Now</string>
    <string name="rank_history">History</string>
    <string name="rank_day">Day</string>
    <string name="rank_week">Week</string>
    <string name="rank_month">Month</string>
    <string name="rank_all">All</string>

    <string name="rank_today">Today</string>
    <string name="rank_yesterday">Yesterday</string>
    <string name="rank_this_week">This Week</string>
    <string name="rank_last_week">Last Week</string>
    <string name="rank_this_month">Last Month</string>
    <string name="rank_last_month">Last Month</string>

    <string name="can_not_add_note">Can not add note on this page.</string>
    <string name="exp_add_1">Exp +1 Current Exp : </string>
</resources>
