<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/rank_list_back"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/doc_note_back" />
    <item
        android:id="@+id/rank_day"
        android:icon="@drawable/ic_looks_one_black_24dp"
        android:title="@string/rank_day" />
    <item
        android:id="@+id/rank_week"
        android:icon="@drawable/ic_looks_two_black_24dp"
        android:title="@string/rank_week" />
    <item
        android:id="@+id/rank_month"
        android:icon="@drawable/ic_looks_3_black_24dp"
        android:title="@string/rank_month" />
    <item
        android:id="@+id/rank_all"
        android:icon="@drawable/ic_looks_4_black_24dp"
        android:title="@string/rank_all" />
</menu>
