<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_translate"
        android:icon="@drawable/ic_translate_black_24dp"
        android:title="@string/translate" />

    <!--<item-->
        <!--android:id="@+id/navigation_homepage"-->
        <!--android:icon="@drawable/ic_home_black_24dp"-->
        <!--android:title="@string/home_page" />-->

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/nav_about" />

    <item
        android:id="@+id/navigation_note"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/nav_about" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_arrow_forward_black_24dp"
        android:title="@string/title_notifications" />

</menu>
